# contextual-typing

./: CHANGELOG.md  CICCT.cabal  LAGFCT.cabal  LCTICT.cabal  LICENSE  README.md  STLCCT.cabal
app/: Main.hs
programs/: README.md  default_tests.txt
src/: Display.hs  Evaluation.hs  Helper.hs  Lexer.hs  Lexer.x  MyQuickCheck.hs  Parser.hs  Parser.y  Syntax.hs  Typing.hs
