cabal-version: 3.0
name:          CICCT
version:       0.1.0.0
synopsis:      Haskell Implementation of the Contextual Intersection Calculus, an example of the extensibility of Contextual Typing.

description:
  Bidirectional Typing has proven to be somewhat unpredictable when it came to
  extending it with more interesting features. It's not easy to predict when
  annotations may be needed, its specifications can become monolithic and
  progressively less maintainable. Contextual Typing is a novel attempt at
  get rid of many of Bidirectional Typing's flaws, which keeping it's essence.
  Really, it's a generalization of Bidirectional Typing.

homepage:     https://github.com/LambdaFiend/contextual-typing/CICCT
license:      BSD-3-Clause
license-file: LICENSE
author:       Lambda Fiend
maintainer:   thelambdafiend@gmail.com

--copyright:

category:   Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md
  README.md
  programs/README.md

extra-source-files: default_tests.txt

common warnings
  --ghc-options: 

executable CICCT
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: src

  other-modules:
    Display,
    Helper,
    Lexer,
    Parser,
    Syntax,
    Typing,
    Evaluation

  --other-extensions:

  build-depends: 
    base ^>=4.20.2.0,
    array ^>=0.5.8.0,
    directory ^>=1.3.10.1,
    ansi-terminal ^>=1.1.5

  hs-source-dirs:
    app
    src
    programs

  default-language: Haskell2010

  --default-extensions:
