cabal-version: 3.0
name:          LAGFCT
version:       0.1.0.0
synopsis:      Haskell Implementation of Let Arguments Go First.

description:
  Bringing the type information of the right side of an application
  to its consumer is the requirement for checking whether an elimination
  form is well-typed. Let Arguments Go First is a very simple specification
  of that principle. However limited it may be, it's an important
  introduction to the novelty of Contextual Typing.

homepage:     https://github.com/LambdaFiend/contextual-typing/LAGFCT
license:      BSD-3-Clause
license-file: LICENSE
author:       Lambda Fiend
maintainer:   thelambdafiend@gmail.com

--copyright:

category:   Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md
  README.md
  programs/README.md

extra-source-files: default_tests.txt

common warnings
  --ghc-options: 

executable LAGFCT
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: src

  other-modules:
    Display,
    Helper,
    Lexer,
    Parser,
    Syntax,
    Typing,
    Evaluation

  --other-extensions:

  build-depends: 
    base ^>=4.20.2.0,
    array ^>=0.5.8.0,
    directory ^>=1.3.10.1,
    ansi-terminal ^>=1.1.5

  hs-source-dirs:
    app
    src
    programs

  default-language: Haskell2010

  --default-extensions:
