cabal-version: 3.0
name:          LCTICT
version:       0.1.0.0
synopsis:      A Haskell implementation of the contextual typing version of Local Type Inference.

description:
  A Haskell implementation of the contextual typing version
  of Local Type Inference, a bidirectional typing partial type
  inference uncurried System F.
  It's known as Local Contextual Type Inference and the first
  practical, noticeable difference is that it's curried.


homepage:     https://github.com/LambdaFiend/contextual-typing/tree/LCTICT
license:      BSD-3-Clause
license-file: LICENSE
author:       Lambda Fiend
maintainer:   thelambdafiend@gmail.com

--copyright:

category:   Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md
  README.md
  programs/README.md

extra-source-files: default_tests.txt

common warnings
  --ghc-options: 

executable LCTICT
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: src

  other-modules:
    Display,
    Helper,
    Lexer,
    Parser,
    Syntax,
    Typing,
    Evaluation

  --other-extensions:

  build-depends: 
    base ^>=4.20.2.0,
    array ^>=0.5.8.0,
    directory ^>=1.3.10.1,
    ansi-terminal ^>=1.1.5

  hs-source-dirs:
    app
    src
    programs

  default-language: Haskell2010

  --default-extensions:
