cabal-version: 3.0
name:          STLCCT
version:       0.1.0.0
synopsis:      Haskell Implementation of the Simply Typed Lambda Calculus using Contextual Typing.

description:
  Contextual Typing is a generalization of both Bidirectional Typing and the
  principles of Let Arguments Go First. Contextual Information to the terms
  can be used to aid their typing. There's an emphasis on the consumers of
  elimination forms, as well as a bidirectional flow of information, albeit
  not so obviously as in Bidirectional Typing.

homepage:     https://github.com/LambdaFiend/contextual-typing/STLCCT
license:      BSD-3-Clause
license-file: LICENSE
author:       Lambda Fiend
maintainer:   thelambdafiend@gmail.com

--copyright:

category:   Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md
  README.md
  programs/README.md

extra-source-files: default_tests.txt

common warnings
  --ghc-options: 

executable STLCCT
  import:         warnings
  main-is:        Main.hs
  hs-source-dirs: src

  other-modules:
    Display,
    Helper,
    Lexer,
    Parser,
    Syntax,
    Typing,
    Evaluation

  --other-extensions:

  build-depends: 
    base ^>=4.20.2.0,
    array ^>=0.5.8.0,
    directory ^>=1.3.10.1,
    ansi-terminal ^>=1.1.5

  hs-source-dirs:
    app
    src
    programs

  default-language: Haskell2010

  --default-extensions:
